--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">oweme</string>
     <string name="title_expense">Expenses</string>
-    <string name="title_profile">Profile</string>
+    <string name="title_profile">Log</string>
 </resources>
