--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,11 @@
     <string name="hint_expense">type a new expense</string>
     <string name="button_save">Save</string>
     <string name="empty_not_saved">Expense not saved because it is empty.</string>
+    <string name="cancel">cancel</string>
+    <string name="title_expenditure">expenditure</string>
+    <string name="title_add_expense">add expense</string>
+    <string name="title_activity_expenditure">ExpenditureActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="title_expenditure_activity">expenditure activity</string>
+    <string name="large_text">large text</string>
 </resources>
